Make Changes Fix overflow Add margin-left to list items Remove Horizontal bar Add space between elements Add margin top on article-1 Add logo on navbar for ipad screen size

--- a/style/max-width-1024.css
+++ b/style/max-width-1024.css
@@ -34,6 +34,10 @@
     margin-top: 100px;
   }
 
+  .navbar-2 > ul > li {
+    margin-right: 10px;
+  }
+
   #logo,
   #timerDisplay,
   #get-tickets,
@@ -52,6 +56,19 @@
 
   .article-2-and-3-container {
     width: 35%;
+  }
+
+  .navbar-2-right-div {
+    width: 5%;
+  }
+
+  .navbar-2 > a {
+    display: unset;
+    margin-right: 10px;
+  }
+
+  .navbar-2 {
+    margin-left: -20px;
   }
 
   .latest-section {
