--- a/style/max-width-690px.css
+++ b/style/max-width-690px.css
@@ -6,6 +6,9 @@
   .article-1 {
     width: 95%;
     margin-left: 7px;
+    padding: 5px;
+    margin-top: 105px;
+    margin-bottom: 5px;
   }
 
   body,
@@ -14,7 +17,7 @@
   .section-1 > .article-2-and-3-container,
   .nav-mobile,
   .deals-row-ul {
-    width: 100%;
+    width: 99%;
   }
 
   .footer-share-ul > li {
@@ -69,12 +72,17 @@
     font-size: 20px;
   }
 
+  .body-header {
+    box-sizing: unset;
+  }
+
   .nav-mobile {
     position: fixed;
-    height: 80px;
+    height: auto;
     background-color: white;
     top: 0;
     z-index: 11;
+    overflow: hidden;
   }
 
   .nav-mobile > ul {
@@ -144,9 +152,15 @@
     width: 100%;
   }
 
+  .footer-share-ul {
+    width: 70%;
+    justify-content: space-between;
+  }
+
   .footer-share-ul-2 {
-    width: 40%;
-    padding-left: 3%;
+    width: 70%;
+    margin: auto;
+    padding-left: 0;
   }
 
   .footer-lower-div > p {
